<resources>
    <string name="app_name">FitTrack</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="workout_name">Workout Name</string>
    <string name="nutrition">Nutrition</string>
    <string name="search_button_desc">Select filter, enter search key</string>
    <string name="total_calories">Total Calories: </string>
    <string name="select_date">Today</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="other">Other</string>

    <string name="calories_format">Calories: %s</string>
    <string name="rest_time_done">DONE</string>
    <string name="new_rest_time">NEW</string>
    <string name="first_rest_time">1:00</string>
    <string name="second_rest_time">2:00</string>
    <string name="third_rest_time">3:00</string>




</resources>