<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/popup_textView"
        android:layout_width="360dp"
        android:layout_height="490dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="71dp"
        android:background="@color/background"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popupBorder"
        tools:listitem="@layout/card_active_exercise"></TextView>

    <TextView
        android:id="@+id/popupBorder"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/top_background"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="50dp"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textSize="40dp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <NumberPicker
        android:id="@+id/numPickSec"
        android:layout_width="205dp"
        android:layout_height="149dp"
        android:layout_marginStart="206dp"
        android:layout_marginBottom="1dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/popupBorder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/popupBorder"
        app:layout_constraintTop_toTopOf="parent" />

    <NumberPicker
        android:id="@+id/numPickMin"
        android:layout_width="205dp"
        android:layout_height="149dp"
        android:layout_marginEnd="206dp"
        android:layout_marginBottom="1dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/popupBorder"
        app:layout_constraintEnd_toEndOf="@+id/popupBorder"
        app:layout_constraintStart_toStartOf="@+id/popupBorder"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/first_resttime"
        android:layout_width="201dp"
        android:layout_height="96dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="142dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="252dp"
        android:background="@drawable/button_background"
        android:text="@string/first_rest_time"
        android:textColor="@color/light_text"
        android:textSize="36dp"
        app:layout_constraintBottom_toBottomOf="@+id/popup_textView"
        app:layout_constraintEnd_toEndOf="@+id/popup_textView"
        app:layout_constraintStart_toStartOf="@+id/popup_textView"
        app:layout_constraintTop_toTopOf="@+id/popup_textView" />

    <Button
        android:id="@+id/new_resttime"
        android:layout_width="201dp"
        android:layout_height="96dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="356dp"
        android:background="@drawable/button_background"
        android:text="@string/new_rest_time"
        android:textColor="@color/light_text"
        android:textSize="36dp"
        app:layout_constraintBottom_toBottomOf="@+id/popup_textView"
        app:layout_constraintEnd_toEndOf="@+id/popup_textView"
        app:layout_constraintStart_toStartOf="@+id/popup_textView"
        app:layout_constraintTop_toTopOf="@+id/popup_textView" />

    <Button
        android:id="@+id/third_resttime"
        android:layout_width="201dp"
        android:layout_height="96dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="358dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/button_background"
        android:text="@string/third_rest_time"
        android:textColor="@color/light_text"
        android:textSize="36dp"
        app:layout_constraintBottom_toBottomOf="@+id/popup_textView"
        app:layout_constraintEnd_toEndOf="@+id/popup_textView"
        app:layout_constraintStart_toStartOf="@+id/popup_textView"
        app:layout_constraintTop_toTopOf="@+id/popup_textView" />

    <Button
        android:id="@+id/second_resttime"
        android:layout_width="201dp"
        android:layout_height="96dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="249dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="145dp"
        android:background="@drawable/button_background"
        android:text="@string/second_rest_time"
        android:textColor="@color/light_text"
        android:textSize="36dp"
        app:layout_constraintBottom_toBottomOf="@+id/popup_textView"
        app:layout_constraintEnd_toEndOf="@+id/popup_textView"
        app:layout_constraintStart_toStartOf="@+id/popup_textView"
        app:layout_constraintTop_toTopOf="@+id/popup_textView" />

</androidx.constraintlayout.widget.ConstraintLayout>